--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">NavigationCompose</string>
+    <string name="header_image_content_description">Header image content description</string>
+    <string name="first_screen">First Screen</string>
+    <string name="open_drawer">Open Drawer</string>
+    <string name="secondScreen">Second Screen</string>
 </resources>
